--- a/app/src/main/res/layout/fragment_explore.xml
+++ b/app/src/main/res/layout/fragment_explore.xml
@@ -89,17 +89,36 @@
                             android:layout_alignParentEnd="true"
                             android:layout_centerVertical="true"
                             android:textColor="@color/blue"
-                            android:text="Cars and Bikes" />
+                            android:text="Select Category" />
 
                 </RelativeLayout>
             
         </LinearLayout>
 
-        <ListView
-            android:visibility="gone"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/frag_explore_ads_list_view"/>
+            android:layout_height="match_parent">
+                <ListView
+                    android:visibility="gone"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:id="@+id/frag_explore_ads_list_view"/>
+
+
+                <GridView xmlns:android="http://schemas.android.com/apk/res/android"
+                    android:id="@+id/frag_explore_gridview"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:columnWidth="90dp"
+                    android:numColumns="2"
+                    android:verticalSpacing="10dp"
+                    android:horizontalSpacing="10dp"
+                    android:stretchMode="columnWidth"
+                    android:gravity="center"
+                    android:visibility="visible"/>
+        </RelativeLayout>
+
+
 
         <LinearLayout
             android:id="@+id/frag_exp_empty_listview_ll"
