--- a/app/src/main/res/layout/content_navigation.xml
+++ b/app/src/main/res/layout/content_navigation.xml
@@ -10,16 +10,29 @@
     tools:showIn="@layout/app_bar_navigation">
 
     <mehdi.sakout.fancybuttons.FancyButton
+        android:id="@+id/content_nav_request_permission_btn"
         android:layout_width="200dp"
         android:layout_height="50dp"
         android:layout_gravity="center"
         android:layout_centerInParent="true"
-        android:id="@+id/content_nav_request_permission_btn"
         fancy:fb_text="Grant Permissions"
         fancy:fb_textColor="@color/black"
         fancy:fb_radius="4dp"
         fancy:fb_focusColor="@color/indigo400"
         fancy:fb_defaultColor="@color/teal100"/>
+
+    <mehdi.sakout.fancybuttons.FancyButton
+        android:id="@+id/content_nav_enable_location_btn"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:layout_gravity="center"
+        android:layout_centerInParent="true"
+        fancy:fb_text="Enable Location"
+        fancy:fb_textColor="@color/black"
+        fancy:fb_radius="4dp"
+        fancy:fb_focusColor="@color/indigo400"
+        fancy:fb_defaultColor="@color/teal100"
+        android:visibility="gone"/>
 
     <FrameLayout
         android:id="@+id/navigation_activity_content_frame"
