--- a/app/src/main/res/layout/bottom_sheet_for_ad_preview.xml
+++ b/app/src/main/res/layout/bottom_sheet_for_ad_preview.xml
@@ -54,6 +54,7 @@
                             android:layout_below="@id/ad_preview_user_name_tv"
                             android:layout_toRightOf="@id/ad_preview_user_iv"
                             android:textSize="12sp"
+                            android:visibility="gone"
                             android:text="Posted on Sept 30"/>
                         <TextView
                             android:id="@+id/ad_preview_relative_time_tv"
